Fixed alignment of buttons in login modal on window resize

--- a/ghi/src/index.css
+++ b/ghi/src/index.css
@@ -96,6 +96,10 @@ p {
   box-shadow: 0px 5px 5px lightgray;
 }
 
+.modal-login {
+  align-items: center
+}
+
 
 /* -------------------------------------------- CARDS -------------------------------------------- */
 
